Make the intl-thread-2 test effective on Solaris 11.
* gettext-tools/m4/locale-de.m4: New file, based on locale-fr.m4 from gnulib.
* gettext-tools/m4/Makefile.am (EXTRA_DIST): Add it.
* gettext-tools/configure.ac: Invoke gt_LOCALE_DE_UTF8.
* gettext-tools/tests/init-env.in: Set LOCALE_DE_UTF8.
* gettext-tools/tests/intl-thread-2: Use a German instead of a Turkish locale.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -464,6 +464,7 @@ gl_PROG_ANSI_CXX([CXX], [ANSICXX])
 gt_LOCALE_FR
 gt_LOCALE_FR_UTF8
 gt_LOCALE_JA
+gt_LOCALE_DE_UTF8
 
 dnl Checks for functions for the tests/*.c tests.
 AC_CHECK_FUNCS_ONCE([getrlimit setrlimit uselocale])
