--- a/gettext-tools/m4/Makefile.am
+++ b/gettext-tools/m4/Makefile.am
@@ -49,5 +49,6 @@ examplesbuildaux_DATA = \
 EXTRA_DIST = README csharpexec-test.exe \
 exported.m4 \
 hostname.m4 \
+locale-de.m4 \
 setlocale.m4 \
 siginfo.m4
