--- a/gettext-tools/tests/init-env.in
+++ b/gettext-tools/tests/init-env.in
@@ -25,6 +25,7 @@ GLIBC2="@GLIBC2@"
 LOCALE_FR="@LOCALE_FR@"
 LOCALE_FR_UTF8="@LOCALE_FR_UTF8@"
 LOCALE_JA="@LOCALE_JA@"
+LOCALE_DE_UTF8="@LOCALE_DE_UTF8@"
 host_os="@host_os@"
 ARCHIVE_VERSION="@ARCHIVE_VERSION@"
 
