--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -847,6 +847,7 @@ if test -n "$intldir" || test -z "$have_automake19"; then
     intdiv0.m4
     intl.m4
     intldir.m4
+    intlsolaris.m4
     intmax.m4
     inttypes_h.m4
     inttypes-pri.m4
