--- a/gettext-tools/m4/Makefile.am
+++ b/gettext-tools/m4/Makefile.am
@@ -18,6 +18,7 @@ aclocal_DATA = \
   ../../gettext-runtime/m4/intl.m4 \
   ../../gettext-runtime/m4/intldir.m4 \
   ../../gettext-runtime/m4/intlmacosx.m4 \
+  ../../gettext-runtime/m4/intlsolaris.m4 \
   ../../gettext-runtime/m4/intmax.m4 \
   ../../gettext-runtime/m4/inttypes_h.m4 \
   ../../gettext-runtime/m4/inttypes-pri.m4 \
