--- a/gettext-runtime/m4/Makefile.am
+++ b/gettext-runtime/m4/Makefile.am
@@ -13,9 +13,9 @@ glibc21.m4 \
 iconv.m4 \
 intdiv0.m4 \
 intl.m4 \
+intl-thread-locale.m4 \
 intldir.m4 \
 intlmacosx.m4 \
-intlsolaris.m4 \
 intmax.m4 \
 inttypes-pri.m4 \
 inttypes_h.m4 \
