--- a/gettext-tools/misc/gettextize.in
+++ b/gettext-tools/misc/gettextize.in
@@ -846,8 +846,8 @@ if test -n "$intldir" || test -z "$have_automake19"; then
     glibc21.m4
     intdiv0.m4
     intl.m4
+    intl-thread-locale.m4
     intldir.m4
-    intlsolaris.m4
     intmax.m4
     inttypes_h.m4
     inttypes-pri.m4
