--- a/gettext-tools/examples/hello-c++-kde/configure.in.in
+++ b/gettext-tools/examples/hello-c++-kde/configure.in.in
@@ -2,5 +2,5 @@
 AC_CHECK_HEADERS([unistd.h])
 
 AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION(0.15)
+AM_GNU_GETTEXT_VERSION([0.19.8])
 AC_CONFIG_FILES([po/Makefile.in])
