--- a/gettext-tools/examples/hello-c/configure.ac
+++ b/gettext-tools/examples/hello-c/configure.ac
@@ -10,7 +10,7 @@ AM_INIT_AUTOMAKE([1.11])
 AC_PROG_CC
 AC_CHECK_HEADERS([unistd.h])
 AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION(0.15)
+AM_GNU_GETTEXT_VERSION([0.19.8])
 
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([m4/Makefile])
