--- a/gettext-tools/examples/hello-objc-gnome/configure.ac
+++ b/gettext-tools/examples/hello-objc-gnome/configure.ac
@@ -21,7 +21,7 @@ AC_SUBST([OBGNOME_INCLUDES])
 
 AC_CHECK_HEADERS([unistd.h])
 AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION(0.15)
+AM_GNU_GETTEXT_VERSION([0.19.8])
 
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([m4/Makefile])
