--- a/gettext-tools/examples/hello-objc/configure.ac
+++ b/gettext-tools/examples/hello-objc/configure.ac
@@ -11,7 +11,7 @@ AC_PROG_CC
 AC_SUBST(OBJC,["$CC"])
 AC_CHECK_HEADERS([unistd.h])
 AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION(0.15)
+AM_GNU_GETTEXT_VERSION([0.19.8])
 
 AC_CONFIG_FILES([Makefile])
 AC_CONFIG_FILES([m4/Makefile])
