po, examples: Use case-insensitive search for "GNU <PACKAGE_NAME>".
Reported by Akim Demaille <akim@lrde.epita.fr> in
<https://lists.gnu.org/archive/html/bug-gettext/2018-10/msg00020.html>.

* gettext-runtime/po/Makefile.in.in ($(DOMAIN).pot-update): Use a
case-insensitive search for "GNU <PACKAGE_NAME>".
* gettext-tools/examples/hello-*/po/Makefile.am ($(DOMAIN).pot-update):
Likewise.
* gettext-tools/examples/hello-objc-gnustep/po/GNUmakefile
($(DOMAIN).pot-update): Likewise.

--- a/gettext-tools/examples/hello-csharp-forms/po/Makefile.am
+++ b/gettext-tools/examples/hello-csharp-forms/po/Makefile.am
@@ -130,9 +130,9 @@ $(DOMAIN).pot-update: $(POTFILES_DEPS) remove-potcdate.sed
 	package_gnu="$(PACKAGE_GNU)"; \
 	test -n "$$package_gnu" || { \
 	  if { if (LC_ALL=C find --version) 2>/dev/null | grep GNU >/dev/null; then \
-	         LC_ALL=C find -L $(top_srcdir) -maxdepth 1 -type f -size -10000000c -exec grep 'GNU $(PACKAGE)' /dev/null '{}' ';' 2>/dev/null; \
+	         LC_ALL=C find -L $(top_srcdir) -maxdepth 1 -type f -size -10000000c -exec grep -i 'GNU $(PACKAGE)' /dev/null '{}' ';' 2>/dev/null; \
 	       else \
-	         LC_ALL=C grep 'GNU $(PACKAGE)' $(top_srcdir)/* 2>/dev/null; \
+	         LC_ALL=C grep -i 'GNU $(PACKAGE)' $(top_srcdir)/* 2>/dev/null; \
 	       fi; \
 	     } | grep -v 'libtool:' >/dev/null; then \
 	     package_gnu=yes; \
