--- a/gettext-tools/examples/hello-c++-qt/po/Makefile.am
+++ b/gettext-tools/examples/hello-c++-qt/po/Makefile.am
@@ -262,7 +262,7 @@ MOSTLYCLEANFILES += stamp-poT
 MOSTLYCLEANFILES += core core.* *.stackdump $(DOMAIN).po $(DOMAIN).1po $(DOMAIN).2po *.new.po
 MOSTLYCLEANFILES += *.o
 
-MAINTAINERCLEANFILES = stamp-po $(QMFILES)
+MAINTAINERCLEANFILES = $(DOMAIN).pot stamp-po $(QMFILES)
 
 EXTRA_DIST = remove-potcdate.sin LINGUAS $(POFILES) $(QMFILES)
 
