--- a/gettext-tools/examples/hello-perl/po/Makefile.am
+++ b/gettext-tools/examples/hello-perl/po/Makefile.am
@@ -331,7 +331,7 @@ MOSTLYCLEANFILES += stamp-poT
 MOSTLYCLEANFILES += core core.* *.stackdump $(DOMAIN).po $(DOMAIN).1po $(DOMAIN).2po *.new.po
 MOSTLYCLEANFILES += *.o
 
-MAINTAINERCLEANFILES = stamp-po $(GMOFILES)
+MAINTAINERCLEANFILES = $(DOMAIN).pot stamp-po $(GMOFILES)
 
 EXTRA_DIST = remove-potcdate.sin LINGUAS $(POFILES) $(GMOFILES)
 
