Improve reliability of 'make dist'.
* gettext-tools/examples/po/Makefile.am (distdir1): Depend on the .pot file.

--- a/gettext-tools/examples/po/Makefile.am
+++ b/gettext-tools/examples/po/Makefile.am
@@ -338,7 +338,7 @@ EXTRA_DIST = remove-potcdate.sin xsmallpot.sh mmsmallpo.sh LINGUAS \
 
 # Hidden from automake, but really activated. Works around an automake-1.5 bug.
 #distdir: distdir1
-distdir1:
+distdir1: $(srcdir)/$(DOMAIN).pot
 	if test -f $(srcdir)/$(DOMAIN).pot; then \
 	  for file in $(DOMAIN).pot stamp-po $(SMALLPOTS); do \
 	    if test -f $$file; then d=.; else d=$(srcdir); fi; \
